@@ -20,7 +20,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.glassfish.jersey.server.ResourceConfig;
 import org.glassfish.jersey.server.model.Resource;
@@ -166,7 +165,7 @@ class HealthEndpointWebExtensionConfiguration {
 				.createEndpointResources(mapping, Collections.singletonList(this.endpoint), null, null, false)
 				.stream()
 				.filter(Objects::nonNull)
-				.collect(Collectors.toList());
+				.toList();
 			register(endpointResources, config);
 		}
 
