@@ -24,7 +24,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import javax.net.ssl.SSLContext;
 
@@ -236,7 +235,7 @@ public class CassandraAutoConfiguration {
 			return properties.getContactPoints()
 				.stream()
 				.map((candidate) -> formatContactPoint(candidate, properties.getPort()))
-				.collect(Collectors.toList());
+				.toList();
 		}
 		return null;
 	}
